# proyecto-xyz

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  CS2100 - Rúbrica Proyecto - Algoritmos y Estructuras de Datos.xlsx  Proyecto.docx  README.md  Taskfile.yml  debug.ini  justfile  mainjson.json  meson.build  shell.nix
blocksInput/: 1.json  bankformat.json  mainjson.json
blocksRegister/: 1.json  invalidmainjson.json  mainjson.json
build_linux/: .ninja_deps  .ninja_log  build.ninja
build_linux/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
build_linux/meson-logs/: meson-log.txt
build_linux/src/: main
include/: bank.hpp  bank_operations.hpp  block.hpp  blockchain.h  blockchain.hpp  hash_map.hpp  httplib.h  meson.build  sha256.hpp  util.hpp  vector.hpp
sha/: SHA256.cpp  SHA256.h  main.cpp
src/: bank.cpp  bank_operations.cpp  block.cpp  blockchain.cpp  examplejson.json  main.cpp  meson.build  server.cpp  sha256.cpp  util.cpp
tests/: bctest.cpp  meson.build  test_bank.cpp  test_block.cpp  test_blockchain.cpp  test_sha256.cpp
tests/json/: block1.json  blockchain1.json  blockchain2.json
xyz_front/: package-lock.json  package.json
xyz_front/components/: LoginForm.js  Navbar.js
xyz_front/pages/: dashboard.js  index.js  login.js  sales-record.js  transfer.js  withdrawal.js
xyz_front/pages/dashboard/: [pid].js
xyz_front/pages/operation/: [pid].js
xyz_front/pages/sale-register/: [pid].js
xyz_front/pages/sales-record/: [id].js
xyz_front/pages/transfer/: [id].js  [pid].js
xyz_front/pages/withdrawal/: [pid].js
xyz_front/src/utils/: loginApi.js
xyz_front/styles/: globals.css
