project('xyz-aed-project', 'cpp',
        version : '0.0.1',
        license : 'GPL-3.0-or-later',
        default_options : [
                           'cpp_std=c++17',
                           'warning_level=3'
        ])

inc = include_directories('include')

subdir('include')
subdir('src')
subdir('tests')
